--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Thailand</h1>
+	<br>
+	<p>Thaliland is the Asian country which is more liked 
+	hoilday spot of indians which is more affordable and 
+	pouplar for some Adventre activities and different 
+	food culture</p>
+	<ol>
+		<li><strong>Pattaya Beach</strong>
+		</li>
+		<li>Walking Street</li>
+		<li>Oil Massage</li>
+		<li>Pattaya Market</li>
+		<li>Coral Beach</li>
+	</ol>
+	<ul>
+		<li><strong>Noodels</strong>
+		</li>
+		<li>Pork</li>
+		<li>Lizard fry</li>
+		<li>Bat Fry</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
