--- a/main.html
+++ b/main.html
@@ -15,19 +15,21 @@
 	pouplar for some Adventre activities and different 
 	food culture</p>
 	<ol>
-		<li><strong>Pattaya Beach</strong>
+			<li><strong>Pattaya Beach</strong>-One of the Most Famous tourist Spot of thailand
 		</li>
-		<li>Walking Street</li>
-		<li>Oil Massage</li>
-		<li>Pattaya Market</li>
-		<li>Coral Beach</li>
+		<li><strong>Walking Street</strong>-This is mostly a Adult Place that visit By all the forginer for experience </li>
+		<li><strong>Oil Massage</strong>-Relaxing Therpy for body and mind</li>
+		<li><strong>Pattaya Market</strong>-This is Purchase Spot and get unique Product on very low cost</li>
+		<li><strong>Coral Beach</strong>-Most Famous beach in thailand which is cover by all the visiters </li>
 	</ol>
 	<ul>
-		<li><strong>Noodels</strong>
+		<li><strong>Noodels</strong>- A Must try and famous food in Thailand 
 		</li>
-		<li>Pork</li>
-		<li>Lizard fry</li>
-		<li>Bat Fry</li>
+		<li><strong>Pork</strong>-One of the common food that available in all sides of thailand</li>
+		<li><strong>Lizard fry</strong>-Mostly Eaten My Local People but Most of the Forgin People Try this once for a enjoyment</li>
+		<li><strong>Bat Fry</strong>-As pervious on this also mostly Eaten By the Local people only</li>
+		<li><strong>Local veg item</strong>-Local veg Item is usually sells to cover tourist visiters who is not intersted on non-veg items</li>
+		
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
