--- a/main.html
+++ b/main.html
@@ -9,26 +9,34 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Thailand</h1>
-	<hr>
 	<p>Thaliland is the Asian country which is more liked 
 	hoilday spot of indians which is more affordable and 
 	pouplar for some Adventre activities and different 
 	food culture</p>
+	<br>
 	<ol>
-			<li><strong>Pattaya Beach</strong>-One of the Most Famous tourist Spot of thailand
+			<li><strong>Pattaya Beach</strong>-<em>One of the Most Famous tourist Spot of thailand</em>
 		</li>
-		<li><strong>Walking Street</strong>-This is mostly a Adult Place that visit By all the forginer for experience </li>
-		<li><strong>Oil Massage</strong>-Relaxing Therpy for body and mind</li>
-		<li><strong>Pattaya Market</strong>-This is Purchase Spot and get unique Product on very low cost</li>
-		<li><strong>Coral Beach</strong>-Most Famous beach in thailand which is cover by all the visiters </li>
+		<li><strong>Walking Street</strong>-<em>This is mostly a Adult Place that visit By all the forginer for experience </em>
+		</li>
+		<li><strong>Oil Massage</strong>-<em>Relaxing Therpy for body and mind</em>
+		</li>
+		<li><strong>Pattaya Market</strong>-<em>This is Purchase Spot and get unique Product on very low cost</em>
+		</li>
+		<li><strong>Coral Beach</strong>-<em>Most Famous beach in thailand which is cover by all the visiters </em>
+		</li>
 	</ol>
 	<ul>
 		<li><strong>Noodels</strong>- A Must try and famous food in Thailand 
 		</li>
-		<li><strong>Pork</strong>-One of the common food that available in all sides of thailand</li>
-		<li><strong>Lizard fry</strong>-Mostly Eaten My Local People but Most of the Forgin People Try this once for a enjoyment</li>
-		<li><strong>Bat Fry</strong>-As pervious on this also mostly Eaten By the Local people only</li>
-		<li><strong>Local veg item</strong>-Local veg Item is usually sells to cover tourist visiters who is not intersted on non-veg items</li>
+		<li><strong>Pork</strong>-<em>One of the common food that available in all sides of thailand</em>
+		</li>
+		<li><strong>Lizard fry</strong>-<em>Mostly Eaten My Local People but Most of the Forgin People Try this once for a enjoyment</em>
+		</li>
+		<li><strong>Bat Fry</strong>-<em>As pervious on this also mostly Eaten By the Local people only </em>
+		</li>
+		<li><strong>Local veg item</strong>-<em>Local veg Item is usually sells to cover tourist visiters who is not intersted on non-veg items </em>
+		</li>
 		
 	</ul>
     <script type="text/javascript" src="./script.js">
