--- a/main.html
+++ b/main.html
@@ -33,9 +33,9 @@
 		</li>
 		<li><strong>Lizard fry</strong>-<em>Mostly Eaten My Local People but Most of the Forgin People Try this once for a enjoyment</em>
 		</li>
-		<li><strong>Bat Fry</strong>-<em>As pervious on this also mostly Eaten By the Local people only </em>
+		<li><b>Bat Fry</b>-<em>As pervious on this also mostly Eaten By the Local people only </em>
 		</li>
-		<li><strong>Local veg item</strong>-<em>Local veg Item is usually sells to cover tourist visiters who is not intersted on non-veg items </em>
+		<li><i>Local veg item</i>-<em>Local veg Item is usually sells to cover tourist visiters who is not intersted on non-veg items </em>
 		</li>
 		
 	</ul>
